--- a/exercise/package.json
+++ b/exercise/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exercise",
   "version": "0.1.0",
-  "homepage": "https://github.com/patz2025/NewExerciseApp.git",
+  "homepage": "https://patz2025.github.io/UpdatedExerciseApp",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
